Manual text finished

--- a/dispatcher/res/html/log.html
+++ b/dispatcher/res/html/log.html
@@ -71,73 +71,29 @@
           </div>
         </div>
         <div class="span9">
-          <h2>План объекта</h2>
-          <div class="span7">
-            <object
-               data="http://localhost:8089/svg/plan-control.svg" id="plan" type="image/svg+xml">
-            </object>
-          </div>
-          <div class="span3">
-	    <div class="hint hint1">
-	      <div class="hint-header">
-		Комната № 206
-		<i class="icon icon-remove"></i>
-	      </div>
-              <div class="hint-inner">
-                <p>Состояние: <span>безопасно</span></p>
-                <table class="tbl-category-room">
-                  <tr>
-                    <td class="td-large-icon"><img src="../img/icon-large-user.png"/></td>
-                    <td class="td-large-icon"><img src="../img/icon-large-guard.png"/></td>
-                    <td class="td-large-icon"><img src="../img/icon-large-disabled.png"/></td>		  
-                  </tr>
-                  <tr>
-                    <td>3</td>
-                    <td>2</td>
-                    <td>3</td>
-		  </tr>
-		</table>
-		<table class="tbl-total-room">
-		  <tr>		  
-		    <td class="td-large-icon"><img src="../img/icon-large-sum.png"/></td>
-                  </tr>
-		  <tr>
-		    <td>8</td>
-		  </tr>
-                </table>
-              </div>
-            </div>
-
-	    <div class="hint hint2">
-	      <div class="hint-header">
-		Комната № 208
-		<i class="icon icon-remove"></i>
-	      </div>
-              <div class="hint-inner">
-                <p>Состояние: <span>безопасно</span></p>
-                <table class="tbl-category-room">
-                  <tr>
-                    <td class="td-large-icon"><img src="../img/icon-large-user.png"/></td>
-                    <td class="td-large-icon"><img src="../img/icon-large-guard.png"/></td>
-                    <td class="td-large-icon"><img src="../img/icon-large-disabled.png"/></td>		  
-                  </tr>
-                  <tr>
-                    <td>1</td>
-                    <td>3</td>
-                    <td>1</td>
-		  </tr>
-		</table>
-		<table class="tbl-total-room">
-		  <tr>		  
-		    <td class="td-large-icon"><img src="../img/icon-large-sum.png"/></td>
-                  </tr>
-		  <tr>
-		    <td>5</td>
-		  </tr>
-                </table>
-              </div>
-            </div>
-          </div>
+          <h2>Журнал</h2>
+          <table class="table table-hover">
+	    <thead>
+	      <tr>
+		<th>№</th>
+		<th>Дата</th>
+		<th>Время</th>
+		<th>Тип события</th>
+		<th>Место события</th>
+		<th>Описание</th>
+	      </tr>
+	      <tbody>
+		<tr class="success">
+		  <td>1</td>
+		  <td>12.06.2013</td>
+		  <td>18:55</td>
+		  <td>Подозрение на вогорание</td>
+		  <td>Комната № 206</td>
+		  <td>Превышение уровня температуры на датчике sdaasdjh s</td>
+		</tr>
+	      </tbody>
+            </thead>
+	  </table>
         </div>
       </div>
     </div>
