--- a/dispatcher/res/html/control.html
+++ b/dispatcher/res/html/control.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Диспетчерский программный комплекс «СОИБ-Д»</title>
+    <title>Диспетчерский программный комплекс «СИНАПС-Д»</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -14,11 +14,14 @@
   <body>
     <div class="container-fluid">
       <div class="row-fluid">
-        <img style="float:left;margin: 10px 30px 10px 10px;"  src="../img/ae.png"/>
-        <img style="float:left;margin: 10px 30px 10px 10px;" heigth="30px" src="../img/niir.png"/>
+	<img style="float:left;margin: 10px 30px -10px 10px; height:65px;" heigth="30px" src="../img/cems-logo.png"/>
+        <img style="float:left;margin: 25px 30px 8px 10px;"  src="../img/ae.png"/>
+        <img style="float:left;margin: 25px 30px 8px 10px;" heigth="30px" src="../img/niir.png"/>
+
+
         <div style="float:right;margin-top:50px;"><a href="help.html">Помощь</a> | <a href="070@niir.ru">Связаться с разработчиками</a></div></div>
       <div style="position:relative;height:25px;font-weight:bold;  background-color:#ff6d06;margin-bottom:10px;padding:5px 0 0px 15px; font-size:16px;color:white;border-radius:10px;">
-        Диспетчерский программный комплекс «СОИБ-Д»
+        Диспетчерский программный комплекс «СИНАПС-Д»
       </div>
       <div class="row-fluid">
         <div class="span3">
